app/assets/stylesheets/components/_qrcode.scss
/*
 *= require_tree .
 *= require_self
 */

.container-qr {
  display: flex;
  justify-content: center;
}

table.qr-code {
  border-width: 0;
  border-style: none;
  border-color: #0000ff;
  border-collapse: collapse;
}
table.qr-code td {
  border-width: 0;
  border-style: none;
  border-color: #0000ff;
  border-collapse: collapse;
  padding: 0;
  margin: 0;
  width: 10px;
  height: 10px;
}
table.qr-code td.black { background-color: #000; }
table.qr-code td.white { background-color: #fff; }
table.qr-code td.red { background-color: $red; }

